@@ -1,0 +1,30 @@
+/* -*- Mode: C; tab-width: 4; indent-tabs-mode: t; c-basic-offset: 4 -*- */
+/*
+ * Copyright (C) 2008 Daniel Morales <daniminas@gmail.com>
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the
+ * Free Software Foundation, Inc., 51 Franklin St, Fifth Floor,
+ * Boston, MA 02110-1301, USA.
+ */
+
+#ifndef __TWITUX_FRIENDS_DIALOG_H__
+#define __TWITUX_FRIENDS_DIALOG_H__
+
+#include <gtk/gtkwindow.h>
+#include <glib/glist.h>
+
+void twitux_lists_dialog_show       (GtkWindow *parent);
+void twitux_lists_dialog_load_lists (GList     *users);
+
+#endif /* __TWITUX_FRIENDS_DIALOG_H__ */
